<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_field_hint"
        android:text="@string/default_login_value"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_editText"
        android:hint="@string/password_field_hint"
        android:text="@string/default_password_value"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/server_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/server_field_hint"
        android:layout_below="@+id/password_editText"
        android:text="@string/default_server_value"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/port_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/server_editText"
        android:hint="@string/port_field_hint"
        android:text="@string/default_port_value"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/period_editText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/period_field_hint"
        android:layout_below="@+id/port_editText"
        android:text="@string/default_period_value"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/period_editText"
        android:layout_alignEnd="@id/period_editText"
        android:text="@string/go_button_text"
        android:onClick="startEmailCheckingService"/>

</RelativeLayout>